minor style improvements for tag links component

--- a/src/components/tag-links/styles.module.css
+++ b/src/components/tag-links/styles.module.css
@@ -9,7 +9,7 @@
 
 .links {
   overflow: scroll;
-  overscroll-behavior: contain;
+  overscroll-behavior: contain auto;
   scrollbar-width: none;
   white-space: nowrap;
   width: 100%;
