--- a/src/pages/tracks/index.module.css
+++ b/src/pages/tracks/index.module.css
@@ -35,7 +35,7 @@
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (any-hover: hover) {
   .headerReset:hover {
     background: rgb(var(--gray-700));
     color: rgb(var(--gray-100));
@@ -54,7 +54,7 @@
   width: 1rem;
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (any-hover: hover) {
   .headerReset:hover .headerResetIcon {
     color: rgb(var(--gray-400));
   }
@@ -86,7 +86,7 @@
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (any-hover: hover) {
   .headerDropdown:hover {
     background: rgb(var(--gray-700));
     color: rgb(var(--gray-100));
@@ -104,7 +104,7 @@ details[open] .headerDropdown {
   color: rgb(var(--gray-400) / 70%);
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (any-hover: hover) {
   .headerDropdown:hover .headerDropdownIcon {
     color: rgb(var(--gray-400));
   }
