--- a/src/components/dropdown/link/styles.module.css
+++ b/src/components/dropdown/link/styles.module.css
@@ -5,7 +5,7 @@
   padding: 0.25rem 0.75rem;
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (any-hover: hover) {
   .container:hover {
     background: rgb(var(--gray-700));
     color: rgb(var(--gray-100));
