--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -1,6 +1,6 @@
 .srOnly {
   border-width: 0;
-  clip: rect(0, 0, 0, 0);
+  clip-path: inset(0 0 100% 100%);
   height: 1px;
   margin: -1px;
   overflow: hidden;
