--- a/src/components/brand-icon-links/styles.module.css
+++ b/src/components/brand-icon-links/styles.module.css
@@ -1,7 +1,8 @@
 .container {
+  align-items: center;
   display: flex;
   flex-flow: row wrap;
-  gap: 0.75rem;
+  gap: 0.5rem;
 }
 
 @media (any-hover: hover) {
@@ -11,7 +12,6 @@
 }
 
 .linkIcon {
-  height: 1.25rem;
-  vertical-align: -0.2rem;
-  width: 1.25rem;
+  height: 1.5rem;
+  width: 1.5rem;
 }
