--- a/src/pages/404.module.css
+++ b/src/pages/404.module.css
@@ -6,21 +6,15 @@
   justify-content: center;
 }
 
-.description {
-  align-items: center;
-  display: inline-flex;
-  gap: 0.3rem;
-}
-
 .descriptionIcon {
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  margin: 0 0.25rem 0 0;
+  vertical-align: -0.25rem;
+  width: 1.25rem;
 }
 
 .link {
-  align-items: center;
   color: rgb(var(--rose-500));
-  display: inline-flex;
   gap: 0.25rem;
   margin: 2.5rem 0 0;
 }
@@ -32,6 +26,8 @@
 
 .linkIcon {
   color: rgb(var(--rose-500) / 60%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  margin: 0 0.125rem 0 0;
+  vertical-align: -0.25rem;
+  width: 1.25rem;
 }
