--- a/src/pages/admin/index.module.css
+++ b/src/pages/admin/index.module.css
@@ -12,10 +12,10 @@
 }
 
 .informationIcon {
-  height: 1rem;
+  height: 1.25rem;
   margin: 0 0.25rem 0 0;
-  vertical-align: -0.125rem;
-  width: 1rem;
+  vertical-align: -0.25rem;
+  width: 1.25rem;
 }
 
 .informationLink {
@@ -52,6 +52,13 @@
 .mainCardLinkIcon {
   height: 1rem;
   width: 1rem;
+}
+
+@media (min-width: 768px) {
+  .mainCardLinkIcon {
+    height: 1.125rem;
+    width: 1.125rem;
+  }
 }
 
 .footer {
