--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -26,6 +26,14 @@
   width: 1rem;
 }
 
+@media (min-width: 768px) {
+  .recentMainCardIcon {
+    height: 1.125rem;
+    margin: 0.1rem 0 0;
+    width: 1.125rem;
+  }
+}
+
 .search {
   margin: 2.5rem 0 0;
 }
@@ -56,10 +64,7 @@
 }
 
 .footerLink {
-  align-items: center;
   color: rgb(var(--rose-500));
-  display: inline-flex;
-  gap: 0.25rem;
 }
 
 .footerLink:active,
@@ -73,6 +78,8 @@
 
 .footerLinkIcon {
   color: rgb(var(--rose-500) / 60%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  margin: 0 0 0 0.125rem;
+  vertical-align: -0.25rem;
+  width: 1.25rem;
 }
