--- a/src/pages/labels/[id]/index.module.css
+++ b/src/pages/labels/[id]/index.module.css
@@ -7,11 +7,8 @@
 }
 
 .contentLink {
-  align-items: center;
   color: rgb(var(--rose-500));
-  display: inline-flex;
   font-weight: 700;
-  gap: 0.25rem;
 }
 
 .contentLink:active,
@@ -21,8 +18,10 @@
 
 .contentLinkIcon {
   color: rgb(var(--rose-500) / 60%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  margin: 0 0 0 0.25rem;
+  vertical-align: -0.25rem;
+  width: 1.25rem;
 }
 
 .action {
@@ -51,6 +50,6 @@
 }
 
 .actionButtonIcon {
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  width: 1.25rem;
 }
