--- a/src/pages/labels/index.module.css
+++ b/src/pages/labels/index.module.css
@@ -54,8 +54,8 @@
 
 .headerResetIcon {
   color: rgb(var(--gray-400) / 70%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.125rem;
+  width: 1.125rem;
 }
 
 @media (any-hover: hover) {
@@ -127,8 +127,8 @@ details[open] .headerDropdown .headerDropdownIcon {
 }
 
 .headerDropdownErrorIcon {
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  width: 1.25rem;
 }
 
 .searchFormContainer {
@@ -182,12 +182,9 @@ details[open] .headerDropdown .headerDropdownIcon {
 }
 
 .mainName {
-  align-items: center;
   color: rgb(var(--rose-500));
-  display: inline-flex;
   font-size: 1.2rem;
   font-weight: 700;
-  gap: 0.25rem;
 }
 
 .mainName:active,
@@ -197,8 +194,10 @@ details[open] .headerDropdown .headerDropdownIcon {
 
 .mainNameIcon {
   color: rgb(var(--rose-500) / 60%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  margin: 0 0 0 0.25rem;
+  vertical-align: -0.2rem;
+  width: 1.25rem;
 }
 
 .mainCountryContainer {
