--- a/src/pages/tracks/admin.module.css
+++ b/src/pages/tracks/admin.module.css
@@ -35,8 +35,8 @@
 }
 
 .filterComboboxIcon {
-  height: 0.75rem;
-  width: 0.75rem;
+  height: 1rem;
+  width: 1rem;
 }
 
 .content {
@@ -65,9 +65,10 @@
 
 .contentLinkIcon {
   color: rgb(var(--rose-500) / 60%);
-  height: 1rem;
+  height: 1.25rem;
   margin: 0 0 0 0.25rem;
-  width: 1rem;
+  vertical-align: -0.25rem;
+  width: 1.25rem;
 }
 
 .contentToggleButton {
