--- a/src/pages/tracks/index.module.css
+++ b/src/pages/tracks/index.module.css
@@ -50,8 +50,8 @@
 
 .headerResetIcon {
   color: rgb(var(--gray-400) / 70%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.125rem;
+  width: 1.125rem;
 }
 
 @media (any-hover: hover) {
@@ -123,8 +123,8 @@ details[open] .headerDropdown .headerDropdownIcon {
 }
 
 .headerDropdownErrorIcon {
-  height: 1rem;
-  width: 1rem;
+  height: 1.25rem;
+  width: 1.25rem;
 }
 
 .searchFormContainer {
@@ -173,6 +173,14 @@ details[open] .headerDropdown .headerDropdownIcon {
 .trackCardIcon {
   height: 1rem;
   width: 1rem;
+}
+
+@media (min-width: 768px) {
+  .trackCardIcon {
+    height: 1.125rem;
+    margin: 0.1rem 0 0;
+    width: 1.125rem;
+  }
 }
 
 .pagination {
