--- a/src/components/brand-icon-links/styles.module.css
+++ b/src/components/brand-icon-links/styles.module.css
@@ -2,7 +2,8 @@
   align-items: center;
   display: flex;
   flex-flow: row wrap;
-  gap: 0.5rem;
+  gap: 0.3rem 0.5rem;
+  line-height: 1;
 }
 
 @media (any-hover: hover) {
