--- a/src/layouts/header/styles.module.css
+++ b/src/layouts/header/styles.module.css
@@ -104,7 +104,7 @@
 }
 
 .subLinksAndMoreLinksDropdown {
-  padding: 0.5rem 0.75rem 0.45rem;
+  padding: 0.45rem 0.5rem;
 }
 
 @media (any-hover: hover) {
@@ -160,7 +160,7 @@ details[open] .subLinksAndMoreLinksDropdown {
 }
 
 .moreLinksDropdown {
-  padding: 0.5rem 0.75rem 0.45rem;
+  padding: 0.45rem 0.5rem;
 }
 
 @media (any-hover: hover) {
@@ -201,8 +201,8 @@ details[open] .moreLinksDropdown {
 .menu {
   border-radius: var(--rounded);
   line-height: 1;
-  margin: 0 -0.5rem 0 0;
-  padding: 0.5rem 0.75rem 0.45rem;
+  margin: 0 -0.25rem 0 0;
+  padding: 0.5rem;
 }
 
 .menu[aria-expanded="true"] {
