--- a/src/layouts/footer/styles.module.css
+++ b/src/layouts/footer/styles.module.css
@@ -40,7 +40,7 @@
 
 .close {
   border-radius: var(--rounded);
-  margin: 0.125rem 0.5rem 0 0;
+  margin: 0 0.5rem 0 0;
   padding: 0.4rem 0.5rem;
 }
 
