--- a/src/layouts/player/styles.module.css
+++ b/src/layouts/player/styles.module.css
@@ -69,11 +69,11 @@
 }
 
 .footer {
-  align-items: center;
   display: flex;
   font-size: var(--text-sm);
   font-weight: 700;
   justify-content: center;
+  line-height: 2;
   margin: 1.5rem 0 0;
 }
 
@@ -84,7 +84,10 @@
 }
 
 .footerLink {
+  align-items: center;
   color: rgb(var(--rose-500));
+  display: inline-flex;
+  gap: 0.125rem;
 }
 
 .footerLink:active,
@@ -95,8 +98,6 @@
 .footerLinkIcon {
   color: rgb(var(--rose-500) / 60%);
   height: 1.25rem;
-  margin: 0 0.125rem 0 0;
-  vertical-align: -0.25rem;
   width: 1.25rem;
 }
 
