--- a/src/pages/about/index.module.css
+++ b/src/pages/about/index.module.css
@@ -10,11 +10,12 @@
 
 .link {
   align-items: center;
+  border-bottom: 0.1rem solid rgb(var(--rose-500) / 70%);
   color: rgb(var(--rose-500));
   display: inline-flex;
-  gap: 0.2rem;
-  margin: 0.5rem 0 0;
-  text-decoration: underline;
+  gap: 0.125rem;
+  line-height: 1.4;
+  margin: 1rem 0 0;
 }
 
 .link:active,
@@ -24,6 +25,6 @@
 
 .linkIcon {
   color: rgb(var(--rose-500) / 70%);
-  height: 1.25rem;
-  width: 1.25rem;
+  height: 1.125rem;
+  width: 1.125rem;
 }
