--- a/src/pages/contact/index.module.css
+++ b/src/pages/contact/index.module.css
@@ -10,10 +10,11 @@
 
 .link {
   align-items: center;
+  border-bottom: 0.1rem solid rgb(var(--rose-500) / 70%);
   color: rgb(var(--rose-500));
   display: inline-flex;
-  gap: 0.2rem;
-  text-decoration: underline;
+  gap: 0.125rem;
+  line-height: 1.4;
 }
 
 .link:active,
@@ -23,6 +24,6 @@
 
 .linkIcon {
   color: rgb(var(--rose-500) / 70%);
-  height: 1.25rem;
-  width: 1.25rem;
+  height: 1.125rem;
+  width: 1.125rem;
 }
