--- a/src/layouts/admin/layout/styles.module.css
+++ b/src/layouts/admin/layout/styles.module.css
@@ -11,26 +11,26 @@
   width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .main {
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) {
+@media (width >= 1024px) {
   .main {
     max-width: 1024px;
     padding: 1.5rem 8rem 7rem;
   }
 }
 
-@media (min-width: 1280px) {
+@media (width >= 1280px) {
   .main {
     max-width: 1280px;
   }
 }
 
-@media (min-width: 1536px) {
+@media (width >= 1536px) {
   .main {
     max-width: 1536px;
   }
@@ -43,7 +43,7 @@
   justify-content: center;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .mainHeader {
     font-size: var(--text-base);
   }
