--- a/src/layouts/header/styles.module.css
+++ b/src/layouts/header/styles.module.css
@@ -16,26 +16,26 @@
   width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .pc {
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) {
+@media (width >= 1024px) {
   .pc {
     max-width: 1024px;
     padding: 0 8rem;
   }
 }
 
-@media (min-width: 1280px) {
+@media (width >= 1280px) {
   .pc {
     max-width: 1280px;
   }
 }
 
-@media (min-width: 1536px) {
+@media (width >= 1536px) {
   .pc {
     max-width: 1536px;
   }
@@ -57,7 +57,7 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .mainLinkContainer {
     display: block;
   }
@@ -91,13 +91,13 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .subLinksAndMoreLinksDropdownContainer {
     display: block;
   }
 }
 
-@media (min-width: 1536px) {
+@media (width >= 1536px) {
   .subLinksAndMoreLinksDropdownContainer {
     display: none;
   }
@@ -125,7 +125,7 @@ details[open] .subLinksAndMoreLinksDropdown {
   display: none;
 }
 
-@media (min-width: 1536px) {
+@media (width >= 1536px) {
   .subLinkContainer {
     display: block;
   }
@@ -153,7 +153,7 @@ details[open] .subLinksAndMoreLinksDropdown {
   display: none;
 }
 
-@media (min-width: 1536px) {
+@media (width >= 1536px) {
   .moreLinksDropdownContainer {
     display: block;
   }
@@ -182,7 +182,7 @@ details[open] .moreLinksDropdown {
   margin: 0 0 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .searchFormContainer {
     display: block;
   }
@@ -192,7 +192,7 @@ details[open] .moreLinksDropdown {
   margin: 0 0 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .menuContainer {
     display: none;
   }
@@ -220,7 +220,7 @@ details[open] .moreLinksDropdown {
   transition: max-height 0.3s;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .mobile {
     display: none;
   }
