--- a/src/layouts/admin/pages/styles.module.css
+++ b/src/layouts/admin/pages/styles.module.css
@@ -3,7 +3,7 @@
   padding: 0.75rem;
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .container {
     font-size: var(--text-base);
   }
