--- a/src/layouts/player/styles.module.css
+++ b/src/layouts/player/styles.module.css
@@ -12,14 +12,14 @@
   position: relative;
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .mainEmbedContainerAspectSquare {
     grid-column: span 8 / span 8;
     grid-column-start: 3;
   }
 }
 
-@media (width >= 1024px) {
+@media (width >= 64rem) {
   .mainEmbedContainerAspectSquare {
     grid-column: span 6 / span 6;
     grid-column-start: 4;
@@ -52,7 +52,7 @@
   margin: 1.5rem 0 0;
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .title {
     font-size: 1.4rem;
   }
@@ -62,7 +62,7 @@
   font-size: var(--text-sm);
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .provider {
     font-size: var(--text-base);
   }
@@ -77,7 +77,7 @@
   margin: 1.5rem 0 0;
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .footer {
     font-size: var(--text-base);
   }
