--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -7,7 +7,7 @@
   margin: 0.25rem 0 0;
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .recentMain {
     display: grid;
     gap: 1.5rem;
@@ -15,7 +15,7 @@
   }
 }
 
-@media (width >= 1280px) {
+@media (width >= 80rem) {
   .recentMain {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -26,7 +26,7 @@
   width: 1rem;
 }
 
-@media (width >= 768px) {
+@media (width >= 48rem) {
   .recentMainCardIcon {
     height: 1.125rem;
     width: 1.125rem;
